Fixed items in the background not being covered up by the browser.

--- a/src/browser.css
+++ b/src/browser.css
@@ -12,6 +12,7 @@ body {
   overflow-y: auto;
   border-right: 0.1rem solid #111;
   color: #CCC;
+  background: #000;
 }
 
 #browser .header {
